# Synchronizer

./: .gitignore  CMakeLists.txt  README.md  compile_and_run.sh  main.cpp
include/: synchronizer.hpp  utils.hpp
src/: main.cpp  utils.cpp
tests/: CMakeLists.txt  compile_and_run.sh  synchronizer_test.cpp
